Debian: Added missing dependency on yaml

--- a/debian/control
+++ b/debian/control
@@ -10,11 +10,13 @@ Build-Depends: debhelper (>= 9),
                base-files (>= 11) | python-all-dev (>= 2.6.6-2),
                base-files (>= 11) | python-setuptools,
                base-files (>= 11) | python-jinja2,
+               base-files (>= 11) | python-yaml,
                scons,
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
                python3-setuptools,
                python3-jinja2,
+               python3-yaml,
                zlib1g-dev,
                base-files (>= 11) | python-appdirs,
                python3-appdirs | base-files (<< 7.2),
