--- a/nuitka/plugins/standard/anti-bloat.yml
+++ b/nuitka/plugins/standard/anti-bloat.yml
@@ -64,12 +64,6 @@ PIL.ImageShow:
   replacements:
     "from IPython.display import display as ipython_display": "'raise ImportError'"
 
-pandas:
-  description: "remove pandas testing framework"
-  replacements:
-    "import pandas.testing": ""
-    "from pandas.util._tester import test": ""
-
 jinja2.defaults:
   description: "remove jinja2 testing framework"
   replacements:
@@ -230,3 +224,24 @@ h5py:
   description: "remove h5py testing framework"
   change_function:
     "run_tests": "'(lambda args=\\'\\': None)'"
+
+pandas:
+  description: "remove pandas testing framework"
+  replacements:
+    "import pandas.testing": ""
+    "from pandas.util._tester import test": ""
+
+pandas._testing:
+  description: "remove pytest testing framework"
+  change_function:
+    "external_error_raised": "'(lambda: None)'"
+
+pandas._testing._io:
+  description: "remove pytest testing framework"
+  change_function:
+    # TODO: Actually it would be nice to specify "uncallable" rather than wrong signature
+    # for cases, where the function is not usable afterwards. That will make sure we have
+    # a nice error exit in case, some test code is run an attempts to use it.
+    "network": "'(lambda: None)'"
+    "round_trip_pathlib": "'(lambda: None)'"
+    "round_trip_localpath": "'(lambda: None)'"
