Standalone: Workaround for 'distributed.scheduler' compile times
* There won't be a working Cython in the standalone distribution,
  but we could think of a Nuitka standalone solution one day.

--- a/nuitka/plugins/standard/anti-bloat.yml
+++ b/nuitka/plugins/standard/anti-bloat.yml
@@ -245,3 +245,10 @@ pandas._testing._io:
     "network": "'(lambda: None)'"
     "round_trip_pathlib": "'(lambda: None)'"
     "round_trip_localpath": "'(lambda: None)'"
+
+distributed.scheduler:
+  # TODO: We should replace this with a nuitkarize in Cython maybe.
+  description: "remove cython support"
+  replacements:
+    "from cython import compiled": "'raise ImportError'"
+    "if compiled:": "'if False:'"
