Plugins: Added anti-bloat configuration for pywt test framework

--- a/nuitka/plugins/standard/anti-bloat.yml
+++ b/nuitka/plugins/standard/anti-bloat.yml
@@ -252,3 +252,10 @@ distributed.scheduler:
   replacements:
     "from cython import compiled": "'raise ImportError'"
     "if compiled:": "'if False:'"
+
+pywt._pytesttester:
+  description: "remove pywt testing framework"
+  module_code: |
+    class PytestTester:
+      def __init__(self, name):
+        pass
