--- a/debian/rules
+++ b/debian/rules
@@ -36,8 +36,8 @@ endif
 	dh $@ --with $(BUILD_WITH_ARGUMENT) --buildsystem=pybuild
 
 override_dh_auto_build:
-	rst2pdf README.rst
-	rst2pdf Developer_Manual.rst
+	$(RUN_TEST_PYTHON) -c 'from nuitka.utils.Rest import createPDF; createPDF("README.rst"); createPDF("Developer_Manual.rst")'
+
 	cp Changelog.rst changelog
 	cp Developer_Manual.rst Developer_Manual.txt
 
