Debian: Add missing build dependency needed for rst2pdf with styles

--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,7 @@ Build-Depends: debhelper (>= 9),
                base-files (>= 11) | python-appdirs,
                python3-appdirs | base-files (<< 7.2),
                rst2pdf,
+               fontconfig,
                base-files (>= 11) | python-pil | python-imaging,
                python3-pil | base-files (<< 11),
                ccache,
