Optimization, #1275 cv2 import config.py module failed

--- a/nuitka/plugins/standard/data-files.yml
+++ b/nuitka/plugins/standard/data-files.yml
@@ -92,6 +92,10 @@ sklearn.datasets:
     - "data"
     - "descr"
 
+opencv-python:
+  patterns:
+    - "config*.py"
+
 osgeo:
   dirs:
     - "data"
