Tests: Added test case for build meta and poetry
* Poetry doesn't yet really support his apparently, but lets
  have this still, so we can test once they fix their bug.

--- a/tests/distutils/example_pyproject_2/pyproject.toml
+++ b/tests/distutils/example_pyproject_2/pyproject.toml
@@ -17,6 +17,35 @@
 #     See the License for the specific language governing permissions and
 #     limitations under the License.
 #
-from __future__ import print_function
+[tool.poetry]
+version = "0.1.0"
+name = "hello-world-example"
+description = "Hello places and things"
+packages = [
+    {include = "src" },
+]
+keywords = [
+    "Hello",
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: Other/Proprietary License",
+    "Operating System :: OS Independent"
+]
+authors = ["Nobody really <email@someplace.com>"]
+homepage = "https://www.nuitka.net"
 
-print("Hello Distutils this is", __name__)
+[tool.poetry.dependencies]
+python = "3.6.3"
+
+[tool.poetry.dev-dependencies]
+nuitka = "*"
+build = "*"
+
+[build-system]
+requires = ["setuptools>=42", "wheel", "nuitka"]
+build-backend = "nuitka.distutils.Build"
+
+[virtualenvs]
+create = true
+in-project = true
