Major cleanup of Jinja template organisation
* Renamed all C templates from ".j2" to ".c.j2" for clarity, this
  was not consistent before.

* Move all C templates to codegen, it will be confusing to make a
  difference between ones used during compile time and for the
  static generation, and the lines are going to become blurry.

* Added macro CHECK_OBJECTS to avoid branches on args count in the
  call code templates.

* Cleanup of code that generates header declarations, there was
  some duplication going on.

* Dedicated function for getting a C template rather than a Python
  template, with different default for template folder.

* This is removing part of the technical debt that we have for the
  code generation to use Jinja2 templating for C.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -42,5 +42,5 @@ recursive-include tests/standalone *.py
 recursive-include tests/onefile *.py
 recursive-include tests/plugins *.py
 
-# Templates for code generation.
-recursive-include nuitka/codegen/templates *.j2
+# C templates for code generation.
+recursive-include nuitka/codegen/templates_c *.j2
