--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           python -m nuitka --version
           env | sort
-          python ./tests/run-tests --no-other-python --skip-all-cpython-tests --assume-yes-for-downloads
+          python ./tests/run-tests --no-other-python --skip-reflection-test --skip-all-cpython-tests --assume-yes-for-downloads
 
       - name: PyLint on Nuitka source code
         run: |
@@ -120,7 +120,7 @@ jobs:
         run: |
           python -m nuitka --version
           env | sort
-          python ./tests/run-tests --no-other-python --skip-all-cpython-tests
+          python ./tests/run-tests --no-other-python --skip-reflection-test --skip-all-cpython-tests
 
   mac-python3:
     runs-on: macos-latest
@@ -167,7 +167,7 @@ jobs:
         run: |
           python -m nuitka --version
           env | sort
-          python ./tests/run-tests --no-other-python --skip-all-cpython-tests
+          python ./tests/run-tests --no-other-python --skip-reflection-test --skip-all-cpython-tests
 
   windows:
     runs-on: windows-latest
@@ -209,4 +209,4 @@ jobs:
         run: |
           Get-ChildItem env:
           python -m nuitka --version
-          python .\tests\run-tests --no-other-python --no-debug --skip-all-cpython-tests --assume-yes-for-downloads
+          python .\tests\run-tests --no-other-python --no-debug --skip-reflection-test --skip-all-cpython-tests --assume-yes-for-downloads
