--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "**/__pycache__": true,
         "**/*.orig": true,
         "**/*.tmp": true,
+        "tests/reflected/nuitka": true,
         "tests/distutils/venv_*": true,
         "build" : true,
     },
