--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -1,5 +1,9 @@
-# Speed up Nuitka by having this available.
-orderedset == 2.0.3 ; python_version >= '3.4' or os.name != "nt"
+# Speed up Nuitka by having this available. On Windows, installing on 2.7 is not
+# working easily, and 3.10 has issues on everything but Linux, but definitely on
+# macOS and Windows.
+orderedset == 2.0.3 ; os.name != "nt" and sys.platform != "darwin"
+orderedset == 2.0.3 ; os.name == "nt" and python_version >= '3.4' and python_version <= "3.9"
+orderedset == 2.0.3 ; sys.platform == "darwin" and python_version <= "3.9"
 
 # Make testing more reliable on Python2 with timeout features added.
 subprocess32 == 3.5.4 ; python_version == '2.7'
