Quality: Various typo corrections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,4 +74,44 @@
         "reportMissingImports": "none"
     },
     "restructuredtext.confPath": "",
+    "cSpell.words": [
+        "appdirs",
+        "bytecode",
+        "ccache",
+        "clcache",
+        "conda",
+        "ctypes",
+        "devel",
+        "distutils",
+        "Doxygen",
+        "elif",
+        "EPEL",
+        "girepository",
+        "isort",
+        "libc",
+        "libpython",
+        "lxml",
+        "metaclass",
+        "MSVC",
+        "nofollow",
+        "Nuitka",
+        "onefile",
+        "Organisational",
+        "Podman",
+        "pyenv",
+        "pyproject",
+        "pyside",
+        "pystone",
+        "PYTHONHASHSEED",
+        "PYTHONPATH",
+        "redist",
+        "Scons",
+        "Setuptools",
+        "stdlib",
+        "Tkinter",
+        "traceback",
+        "tracebacks",
+        "ucrt",
+        "uncompiled"
+    ],
 }
