--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,7 +13,8 @@
         "mervin.markdown-formatter",
         "stkb.rewrap",
         "trond-snekvik.simple-rst",
-        "redhat.vscode-yaml"
+        "redhat.vscode-yaml",
+        "streetsidesoftware.code-spell-checker",
     ],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
     "unwantedRecommendations": [
