Onefile: Enhanced compression support
* Now scans for a Python with the necessary module installed.

* Runs the compression as a separate process with that Python.

* With this, compression can be made to work with 2.6 or higher and you
  do not have to install the module where Nuitka lives.

* Uses the new Python scanning to find a suitable install.

* Also make onefile robust against UPX compression of bootloader.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
         "clangcl",
         "clcache",
         "conda",
+        "cpython",
         "ctypes",
         "devel",
         "distutils",
