--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,12 +86,16 @@
         "devel",
         "distutils",
         "Doxygen",
+        "DYLD",
         "elif",
         "EPEL",
         "girepository",
         "Hayen",
         "hotfixes",
+        "idna",
+        "importlib",
         "isort",
+        "Kivy",
         "libc",
         "libpython",
         "lxml",
@@ -100,16 +104,23 @@
         "msys",
         "nofollow",
         "Nuitka",
+        "numpy",
         "onefile",
+        "organisation",
         "Organisational",
+        "otool",
+        "patchelf",
         "Podman",
+        "POSIX",
         "pyenv",
+        "pygsheets",
         "pyproject",
         "pyside",
         "pystone",
         "PYTHONHASHSEED",
         "PYTHONPATH",
         "redist",
+        "RPATH",
         "Scons",
         "Setuptools",
         "stdlib",
@@ -118,6 +129,8 @@
         "tracebacks",
         "ucrt",
         "uncompiled",
+        "unstripped",
+        "virtualenv",
         "zstandard"
     ],
 }
