--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,6 +110,7 @@
         "Organisational",
         "otool",
         "patchelf",
+        "Pickler",
         "Podman",
         "POSIX",
         "pyenv",
