Standalone: Avoid temporary file for detecting imports
* These are harder to trust, and corruption might have been observed on
  Windows.

* Also avoiding the IO might be beneficial too.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,6 +119,7 @@
         "pyside",
         "pystone",
         "PYTHONHASHSEED",
+        "PYTHONIOENCODING",
         "PYTHONPATH",
         "redist",
         "RPATH",
