--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,9 @@
     },
     "restructuredtext.confPath": "",
     "cSpell.words": [
+        "abiflags",
         "appdirs",
+        "asyncgen",
         "bytecode",
         "ccache",
         "clangcl",
@@ -89,6 +91,7 @@
         "DYLD",
         "elif",
         "EPEL",
+        "finalizer",
         "girepository",
         "Hayen",
         "hotfixes",
@@ -102,7 +105,9 @@
         "metaclass",
         "MSVC",
         "msys",
+        "noelf",
         "nofollow",
+        "nosite",
         "Nuitka",
         "numpy",
         "onefile",
@@ -116,16 +121,20 @@
         "pyenv",
         "pygsheets",
         "pyproject",
+        "pyqt",
         "pyside",
         "pystone",
         "PYTHONHASHSEED",
         "PYTHONIOENCODING",
         "PYTHONPATH",
         "redist",
+        "reexecute",
+        "repr",
         "RPATH",
         "Scons",
         "Setuptools",
         "stdlib",
+        "sysflag",
         "Tkinter",
         "traceback",
         "tracebacks",
