--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,7 @@
         "appdirs",
         "asyncgen",
         "bytecode",
+        "CBOOL",
         "ccache",
         "clangcl",
         "clcache",
@@ -106,6 +107,7 @@
         "metaclass",
         "MSVC",
         "msys",
+        "NBOOL",
         "noelf",
         "nofollow",
         "nosite",
@@ -140,6 +142,7 @@
         "Tkinter",
         "traceback",
         "tracebacks",
+        "tshape",
         "ucrt",
         "uncompiled",
         "unstripped",
