macOS: Catch badly resolved DLLs at compile time.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -132,6 +132,7 @@
         "reexecute",
         "repr",
         "RPATH",
+        "rpaths",
         "Scons",
         "Setuptools",
         "stdlib",
