Changelog: Add pointer to the discord server we already use.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
         "EPEL",
         "finalizer",
         "girepository",
+        "Gitter",
         "Hayen",
         "hotfixes",
         "idna",
