Quality: Added init config for sourcery

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -138,6 +138,7 @@
         "rpaths",
         "Scons",
         "Setuptools",
+        "sourcery",
         "stdlib",
         "sysflag",
         "Tkinter",
