Standalone: Added support for including DLL of 'vosk' package.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,7 @@
         "distutils",
         "Doxygen",
         "DYLD",
+        "dylib",
         "elif",
         "EPEL",
         "finalizer",
