Quality: Make rest checking usable for website too

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,6 +116,7 @@
         "Nuitka",
         "numpy",
         "onefile",
+        "optipng",
         "organisation",
         "Organisational",
         "otool",
