Standalone: Added support for requiring modes
* For wx on macOS, console must be disabled, avoid the trap.

* For the PySide2, on macOS the --onefile must be used when the
  application bundle is built or else signing has issues.

* Recommend to use new option --disable-console for PySide2, PySide6
 and wx on non-macOS

--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -69,3 +69,16 @@ importlib.metadata:
 shiboken6:
   depends:
     - "argparse"
+
+# For wx, we need to insist on application bundle.
+wx:
+  standalone_macos_bundle_mode: true
+  disable_console: macos
+
+# For PySide2, we need to use even --onefile when application bundle
+PySide2:
+  standalone_macos_bundle_mode: onefile
+  disable_console: recommend
+
+PySide6:
+  disable_console: recommend
