--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -73,7 +73,7 @@ jobs:
           python ./bin/check-nuitka-with-codespell
         if: matrix.python_version == '3.9'
 
-      - name: Autoformat check on Nuitka source code
+      - name: Auto-format check on Nuitka source code
         run: |
           python ./bin/autoformat-nuitka-source --check-only
         if: matrix.python_version == '3.9'
