Standalone: Fixup missing dependency for urllib.requests

--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -66,6 +66,10 @@ importlib.metadata:
   depends:
     - "email"
 
+urllib.request:
+  depends:
+    - "http.client"
+
 shiboken6:
   depends:
     - "argparse"
