Standalone: Added missing dependency for stdlib extension module

--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -70,6 +70,10 @@ urllib.request:
   depends:
     - "http.client"
 
+_asyncio:
+  depends:
+    - "asyncio"
+
 shiboken6:
   depends:
     - "argparse"
