Distutils: Added support for Nuitka arguments in pyproject.toml files

--- a/tests/distutils/example_pyproject_1/pyproject.toml
+++ b/tests/distutils/example_pyproject_1/pyproject.toml
@@ -20,3 +20,8 @@
 [build-system]
 requires = ["setuptools>=42", "wheel", "nuitka"]
 build-backend = "nuitka.distutils.Build"
+
+[nuitka]
+# These are not recommended, but they make it obvious to have effect.
+show-scons = true
+clang = ""
