User Manual: Document how to provide extra linker and C compilation flags

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
         "bytecode",
         "CBOOL",
         "ccache",
+        "CCFLAGS",
         "clangcl",
         "clcache",
         "conda",
@@ -102,6 +103,7 @@
         "importlib",
         "isort",
         "Kivy",
+        "LDFLAGS",
         "libc",
         "libpython",
         "lldb",
