Actions: Unify how Nuitka dependencies are installed
* Disable version warnings everywhere, these lead to useless reports.

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -39,8 +39,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install patchelf gdb ccache libfuse2
-          python -m pip install -r requirements-devel.txt
-          python -m pip install .
+          python -m pip install --no-python-version-warning --disable-pip-version-check -r requirements-devel.txt
+          python -m pip install --no-python-version-warning --disable-pip-version-check .
 
       - name: Verbose scons output in compilation
         run: |
@@ -95,13 +95,10 @@ jobs:
           otool -L $(which python)
           otool -l $(which python)
 
-      - name: Install Nuitka dependencies
+      - name: 🧳 Install Nuitka and dependencies
         run: |
-          pip install -r requirements-devel.txt
-
-      - name: Install Nuitka
-        run:
-          pip install .
+          pip install --no-python-version-warning --disable-pip-version-check -r requirements-devel.txt
+          pip install --no-python-version-warning --disable-pip-version-check .
 
       - name: Verbose scons output in compilation
         run: |
@@ -140,13 +137,10 @@ jobs:
           otool -l $(which python)
           ls -lR $(dirname $(dirname $(which python)))
 
-      - name: Install Nuitka dependencies
+      - name: 🧳 Install Nuitka and dependencies
         run: |
-          pip install -r requirements-devel.txt
-
-      - name: Install Nuitka
-        run:
-          pip install .
+          pip install --no-python-version-warning --disable-pip-version-check -r requirements-devel.txt
+          pip install --no-python-version-warning --disable-pip-version-check .
 
       - name: Verbose scons output in compilation
         run: |
@@ -180,13 +174,10 @@ jobs:
         with:
           python-version: ${{ matrix.python_version }}
 
-      - name: Install Nuitka dependencies
+      - name: 🧳 Install Nuitka and dependencies
         run: |
-          pip install -r requirements-devel.txt
-
-      - name: Install Nuitka
-        run: |
-          pip install .
+          pip install --no-python-version-warning --disable-pip-version-check -r requirements-devel.txt
+          pip install --no-python-version-warning --disable-pip-version-check .
 
       - name: Verbose scons output in compilation
         run: |
