Standalone: Add missing dependency for shelve module

--- a/nuitka/plugins/standard/implicit-imports.yml
+++ b/nuitka/plugins/standard/implicit-imports.yml
@@ -70,6 +70,14 @@ urllib.request:
   depends:
     - "http.client"
 
+_asyncio:
+  depends:
+    - "asyncio"
+
+shelve:
+  depends:
+    - "dbm"
+
 shiboken6:
   depends:
     - "argparse"
