Scons: Cleanup how noelf and unstriped mode are handled
* The "noelf" is now done in common code, making it have effect
  for onefile for Linux if bootstrap is used.

* The option name for unstriped was mispelled, corrected that.

* Moved setting of striped and unstriped symbols to common
  code.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -150,7 +150,7 @@
         "tshape",
         "ucrt",
         "uncompiled",
-        "unstripped",
+        "unstriped",
         "virtualenv",
         "vmprof",
         "zstandard",
