Plugins: More data file improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -154,7 +154,8 @@
         "virtualenv",
         "vmprof",
         "zstandard",
-        "zstd"
+        "zstd",
+        "Py_ssize_t"
     ],
     "esbonio.server.enabled": true,
 }
