--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,9 +83,11 @@
         "ccache",
         "clangcl",
         "clcache",
+        "closefd",
         "conda",
         "cpython",
         "ctypes",
+        "Cython",
         "devel",
         "distutils",
         "Doxygen",
@@ -95,17 +97,20 @@
         "elif",
         "EPEL",
         "finalizer",
+        "FLUFL",
         "girepository",
         "Gitter",
         "Hayen",
         "hotfixes",
         "idna",
         "importlib",
+        "ipython",
         "isort",
         "Kivy",
         "libc",
         "libpython",
         "lldb",
+        "LPWSTR",
         "lxml",
         "metaclass",
         "MSVC",
@@ -113,6 +118,7 @@
         "NBOOL",
         "noelf",
         "nofollow",
+        "noinclude",
         "nosite",
         "Nuitka",
         "numpy",
@@ -125,6 +131,7 @@
         "Pickler",
         "Podman",
         "POSIX",
+        "Py_ssize_t",
         "pyenv",
         "pygsheets",
         "pyproject",
@@ -154,9 +161,8 @@
         "virtualenv",
         "vmprof",
         "zstandard",
-        "zstd",
-        "Py_ssize_t",
-        "closefd"
+        "zstd"
     ],
     "esbonio.server.enabled": true,
+    "esbonio.sphinx.confDir": "",
 }
